objects/FSL_ErrorCodes__mdt.object
<CustomObject>
    <description>Displaying user friendly error messages for the technical errors</description>
    <fields>
        <fullName>Error_Code__c</fullName>
        <label>Error Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Description__c</fullName>
        <label>Error Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Id__c</fullName>
        <label>Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>FSL_ErrorCodes</label>
    <pluralLabel>FSL_ErrorCodes</pluralLabel>
</CustomObject>